{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "1b286284-fa90-44c8-bfd2-0dea3e7b32c4",
            "actions": [
                {
                    "name": "HammerMovement",
                    "type": "Value",
                    "id": "2c2308aa-3727-4bff-b5ac-1f82d06336fd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RetrackHammer",
                    "type": "Value",
                    "id": "6e6a3e3b-afc2-4219-9d18-a90b98166660",
                    "expectedControlType": "Integer",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8fd23eec-4e59-4fa4-b1c1-ba1370c9f023",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HammerMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae1fd188-10a7-4988-876b-907a8891eb20",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RetrackHammer",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}